# internal/handlers/userHandlers.go
@@ -26,14 +26,32 @@ func (h *UserHandler) GetUsers(_ context.Context, _ users.GetUsersRequestObject)
 
 	for _, usr := range allUsers {
 		user := users.User{
-			Id:        (*uuid.UUID)(&usr.ID),
-			Email:     &usr.Email,
-			Password:  &usr.Password,
-			CreatedAt: &usr.CreatedAt,
-			UpdatedAt: &usr.UpdatedAt,
-			DeletedAt: &usr.DeletedAt,
+			Id:       (*uuid.UUID)(&usr.ID),
+			Email:    &usr.Email,
+			Password: &usr.Password,
 		}
 		respone = append(respone, user)
+	}
+
+	return respone, nil
+}
+
+func (h *UserHandler) GetUsersId(_ context.Context, request users.GetUsersIdRequestObject) (users.GetUsersIdResponseObject, error) {
+	userTasks, err := h.service.GetTasksForUser(request.Id)
+	if err != nil {
+		return nil, err
+	}
+
+	respone := users.GetUsersId200JSONResponse{}
+
+	for _, tsk := range userTasks {
+		task := users.Task{
+			Id:     (*uuid.UUID)(&tsk.ID),
+			Task:   &tsk.Task,
+			IsDone: &tsk.Is_done,
+			UserId: &tsk.UserID,
+		}
+		respone = append(respone, task)
 	}
 
 	return respone, nil
